[package]
name = "icosahedron"
version = "0.1.1"
authors = ["Tyler Hallada <tyler@hallada.net>"]
edition = "2018"
exclude = [
    "output/*",
]
description = "Generates subdivided and truncated icosahedron spheres"
repository = "https://github.com/thallada/icosahedron"
readme = "README.md"
keywords = ["meshes", "3d", "shapes", "icosahedron", "polyhedra"]
categories = ["graphics"]
license = "MIT"

[lib]
name = "icosahedron"
path = "src/lib.rs"

[[bin]]
name = "icosahedron"
path = "src/bin.rs"

[dependencies]
byteorder = "1.3.2"
clap = "2.33.0"
cgmath = { version = "0.17.0", features = ["serde"] }
rand = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
